--- a/package.json
+++ b/package.json
@@ -12,27 +12,31 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/runtime": "^7.4.5",
     "aws-sdk": "^2.483.0",
+    "bcrypt": "^5.0.0",
     "copy": "^0.3.2",
     "dotenv": "^6.2.0",
     "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.5.8",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "nodemailer": "^5.1.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "prisma": "^1.33.0",
-    "prisma-client-lib": "^1.26.4"
+    "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.4.4",
     "nodemon": "^1.18.10"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/server.js",
+    "deploy": "prisma deploy --force",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn run generate"
   }
 }
