--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "prisma-client-lib": "^1.34.10"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "nodemon": "^1.18.10"
   },
   "scripts": {
     "dev": "nodemon --exec babel-node src/server.js",
     "deploy": "prisma deploy --force",
     "generate": "prisma generate",
-    "prisma": "yarn run deploy && yarn run generate"
+    "prisma": "yarn run deploy && yarn run generate",
+    "build": "babel src -d build",
+    "postbuild" : "cd src && copy ./api/**/*.graphql  ../build/api",
+    "start" : "node build/server.js"
   }
 }
