--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "deploy": "prisma deploy --force",
     "generate": "prisma generate",
     "prisma": "yarn run deploy && yarn run generate",
+    "prebuild" : "yarn run generate",
     "build": "babel src -d build",
     "postbuild" : "cd src && copy ./api/**/*.graphql  ../build/api",
     "start" : "node build/server.js"
